Fix overflow and height for instructions page

--- a/frontend/src/stylesheets/components/instructions/_instructions_page.scss
+++ b/frontend/src/stylesheets/components/instructions/_instructions_page.scss
@@ -1,9 +1,10 @@
 .instructions-page {
   display: flex;
   flex-direction: row;
-  justify-content: space-between;
+  justify-content: space-around;
   height: 100%;
   width: 100%;
+  overflow-y: scroll;
 }
 
 .instructions-sidebar {
